--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <div id="stripe">
     <button id="reset">New Colors</button>
     <span id="message"></span>
+    <button id="easy">Easy</button>
+    <button id="hard" class="selected">Hard</button>
+
   </div>
 
   <div id="container" class="clearfix">
