--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Color Game</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+  <h1>
+  The Great
+  <br>
+    <span id="colorDisplay">RGB</span>
+  <br>
+  Color Game
+  </h1>
 
   <div id="stripe">
     <button id="reset">New Colors</button>
     <span id="message"></span>
     <button id="easy">Easy</button>
     <button id="hard" class="selected">Hard</button>
-
   </div>
 
   <div id="container" class="clearfix">
