--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div id="stripe">
     <button id="reset">New Colors</button>
     <span id="message"></span>
-    <button id="easy">Easy</button>
-    <button id="hard" class="selected">Hard</button>
+    <button class="difficulty">Easy</button>
+    <button class="difficulty selected">Hard</button>
   </div>
 
   <div id="container" class="clearfix">
